fix to label on the page

--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -162,7 +162,7 @@
 				  <!--  LOCATION NOTES-->
 				  <div class="form-group">
 					  <label class="form-label-bold" for="venue-additional-notes">
-						  Additional venue details (optional)
+						  Parking and directions (optional)
 
 						  <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, travel instructions or parking details.</span>
 					  </label>
