--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -371,17 +371,17 @@
 						  <div class="form-date " style="margin-top:5px">
 							  <div class="multiple-choice">
 								  <input id="agenda-later" type="radio" name="radio-agenda" value="later"
-										 {% if agendaLaterSelected %} checked="checked" {% endif %} >
+										 {% if session.data['agenda-error-later'] %} checked="checked" {% endif %} >
 								  <label for="agenda-later">Not yet - I'll add one later</label>
 							  </div>
 							  <div class="multiple-choice">
 								  <input id="agenda-no" type="radio" name="radio-agenda" value="no"
-										 {% if agendaNoSelected %} checked="checked" {% endif %} >
+										 {% if session.data['radio-agenda'] == "no" %} checked="checked" {% endif %} >
 								  <label for="agenda-no">No</label>
 							  </div>
 							  <div class="multiple-choice" data-target="show-answers">
 								  <input id="agenda-yes" type="radio" name="radio-agenda" value="yes"
-										 {% if agendaSelected %} checked="checked" {% endif %} >
+										 {% if session.data['radio-agenda'] == "yes" %} checked="checked" {% endif %} >
 								  <label for="agenda-yes">Yes</label>
 							  </div>
 
