--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -381,7 +381,7 @@
 				  {% if session.data['agenda-error-later'] %}
 				  	<dd class="cya-answer bold">Optional field, left empty - but you said you wanted to add later.</dd>
 				  {% elif session.data['agenda-error'] %}
-				  	<dd class="cya-answer bold">Incomplete</dd>
+				  	<dd class="cya-answer bold">Required field, incomplete.</dd>
 				  {% else %}
 				  	<dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['agenda'] }}</dd>
 				  {% endif %}
