fixes to image upload process

--- a/app/views/create-event/images-uploading.html
+++ b/app/views/create-event/images-uploading.html
@@ -78,7 +78,10 @@
 
 			<img src="/public/images/uploading.gif" style="width:217px;height:54px;">
 
+			<p><a href="/create-event/images">Cancel upload</a></p>
 		  </div>
+
+
 
 
 
