--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -400,7 +400,7 @@
 				  </dt>
 
 				  {% if session.data['event-description-error'] %}
-				  	<dd class="cya-answer bold">Optional field, left empty.</dd>
+				  	<dd class="cya-answer">Optional field, left empty.</dd>
 				  {% else %}
 				  	<dd class="cya-answer" style="white-space: pre-wrap;">{{ data['event-description'] }}</dd>
 				  {% endif %}
