--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -95,11 +95,11 @@
 									   style="margin-top:10px;"><span class="summary">Image guidance</span></summary>
 							  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 								  <p style="margin-bottom:10px;">  <!-- note these are made up -->
-									  Minimum resolution: 300px by 200px. Images will be cropped to 3:2 aspect ratio.
+									  Minimum resolution: 400px by 266px. Images will be cropped to 3:2 aspect ratio.
 								  </p>
 
 								  <p>  <!-- note these are made up -->
-									  File types accepted: JPEG and PNG
+									  File types accepted: TBC by Sean
 								  </p>
 
 								  <p style="margin-bottom:10px;">
