--- a/app/views/create-event/partner-logos.html
+++ b/app/views/create-event/partner-logos.html
@@ -89,6 +89,9 @@
 							  Minimum resolution width: 160px
 							  <br>
 							  Images won't be cropped or stretched.
+						  <p>  <!-- note these are made up -->
+							  File types accepted: TBC by Sean
+						  </p>
 						  </p>
 					  </div>
 				  </details>
